fixed the footer to not overlap with the body content

--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -1,20 +1,20 @@
 .footer {
-    position: fixed;
+    position: static;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 90px;
     background-color: rgba(77, 76, 76, 0.896);
     text-align: center;
-}
-
-.footer-title {
-    margin-top: 16px;
-    margin-bottom: 8px;
-    color: white;
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    flex-direction: column;
+    color: white
 }
 
 .footer-body .fa-brands{
     font-size: 20px;
-    color: white;
     margin-left: 8px;
+    color: white;
 }
